--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,26 @@
+anyio==4.9.0
+appdirs==1.4.4
 appnope==0.1.4
 asttokens==3.0.0
+certifi==2025.4.26
+chardet==3.0.4
+charset-normalizer==3.4.2
 comm==0.2.2
+DateTime==5.5
 debugpy==1.8.14
 decorator==5.2.1
+deprecation==2.1.0
+eikon==1.1.18
 executing==2.2.0
+fastexcel==0.14.0
+h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.9
+httpx==0.28.1
+hyperframe==6.1.0
+idna==2.10
+inflection==0.5.1
 ipykernel==6.29.5
 ipython==9.2.0
 ipython_pygments_lexers==1.1.1
@@ -11,8 +28,12 @@ jedi==0.19.2
 jupyter_client==8.6.3
 jupyter_core==5.8.1
 matplotlib-inline==0.1.7
+more-itertools==10.7.0
+Nasdaq-Data-Link==1.0.4
 nest-asyncio==1.6.0
+numpy==2.2.6
 packaging==25.0
+pandas==2.2.3
 parso==0.8.4
 pexpect==4.9.0
 platformdirs==4.3.8
@@ -21,11 +42,23 @@ prompt_toolkit==3.0.51
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==20.0.0
 Pygments==2.19.1
 python-dateutil==2.9.0.post0
+pytz==2025.2
 pyzmq==26.4.0
+Quandl==3.7.0
+requests==2.32.3
+rfc3986==1.5.0
+setuptools==80.9.0
 six==1.17.0
+sniffio==1.3.1
 stack-data==0.6.3
 tornado==6.5.1
 traitlets==5.14.3
+tzdata==2025.2
+urllib3==2.4.0
 wcwidth==0.2.13
+websocket-client==1.8.0
+XlsxWriter==3.2.3
+zope.interface==7.2
